[gd_scene load_steps=60 format=3 uid="uid://d0a57drf7tx4v"]

[ext_resource type="Script" uid="uid://cmkrg13xtjdxt" path="res://scenes/enemies/final_boss/black_emperor.gd" id="1_hljwo"]
[ext_resource type="Texture2D" uid="uid://d24pc25cha5hw" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_1.png" id="5_2anp0"]
[ext_resource type="Texture2D" uid="uid://b0dry7sp8quny" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_2.png" id="6_mq2q6"]
[ext_resource type="Texture2D" uid="uid://htplo31jgoah" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_3.png" id="7_g8jda"]
[ext_resource type="Texture2D" uid="uid://blry1ybp0cr3h" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_4.png" id="8_j5bui"]
[ext_resource type="Texture2D" uid="uid://0hl8ixpbj7en" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_5.png" id="9_jywuh"]
[ext_resource type="Texture2D" uid="uid://bgcq02tqj467s" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_hurt_1.png" id="10_i0lyx"]
[ext_resource type="Texture2D" uid="uid://bw0lj4v2jqd7c" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_idle_1.png" id="10_rehqn"]
[ext_resource type="Texture2D" uid="uid://koyb02ee6oqj" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_6.png" id="10_v1rk7"]
[ext_resource type="Texture2D" uid="uid://doi7qd34pn20y" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_7.png" id="11_lqbuf"]
[ext_resource type="Texture2D" uid="uid://j1vbr38a6rnb" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_hurt_2.png" id="11_mcwyc"]
[ext_resource type="Texture2D" uid="uid://bu07xy8c7sahs" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_idle_2.png" id="11_u2mao"]
[ext_resource type="Texture2D" uid="uid://c8v6s18ylfr67" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_8.png" id="12_dn80d"]
[ext_resource type="Texture2D" uid="uid://m3hdk4fxfum3" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_idle_3.png" id="12_i0lyx"]
[ext_resource type="Texture2D" uid="uid://ct02xl2uo3hri" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_hurt_3.png" id="12_o7w2u"]
[ext_resource type="Texture2D" uid="uid://bi4payhbl81hk" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_9.png" id="13_dibg2"]
[ext_resource type="Texture2D" uid="uid://e7724kdltgta" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_hurt_4.png" id="13_laq78"]
[ext_resource type="Texture2D" uid="uid://bpwkwowucmnif" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_idle_4.png" id="13_mcwyc"]
[ext_resource type="Texture2D" uid="uid://6lsgwshurca4" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_10.png" id="14_inubh"]
[ext_resource type="Texture2D" uid="uid://hy4vhn4ex5b6" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_idle_5.png" id="14_o7w2u"]
[ext_resource type="Texture2D" uid="uid://0d7ui05tapgc" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_11.png" id="15_qosva"]
[ext_resource type="Texture2D" uid="uid://dsdm30rjtonmw" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_12.png" id="16_exgn0"]
[ext_resource type="Texture2D" uid="uid://drhs4kdxjkabe" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_13.png" id="17_hprn1"]
[ext_resource type="Texture2D" uid="uid://ebbyqduh0u6u" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dead_14.png" id="18_u5gwl"]
[ext_resource type="Texture2D" uid="uid://jlbmkvwdm2re" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dash_1.png" id="30_kafvu"]
[ext_resource type="Texture2D" uid="uid://decho11oot68r" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dash_2.png" id="31_dxnia"]
[ext_resource type="Texture2D" uid="uid://docbg8pirejd0" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dash_3.png" id="32_jo5tr"]
[ext_resource type="Texture2D" uid="uid://c7i6ulnbgt5ax" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dash_4.png" id="33_iaysf"]
[ext_resource type="Texture2D" uid="uid://2w0ko2tsisdq" path="res://assets/foxy/fox_final_boss/final/fox_final_boss_dash_5.png" id="34_4fith"]
[ext_resource type="Script" uid="uid://ccpqtop0obu2w" path="res://scripts/area_component/hit_area_2d.gd" id="35_1vt48"]
[ext_resource type="Script" uid="uid://clpgdp80p1wyg" path="res://scenes/enemies/final_boss/fly_lightning.gd" id="35_qc2kf"]
[ext_resource type="Script" uid="uid://csu2b21cwchqw" path="res://scripts/area_component/hurt_area_2d.gd" id="36_451n5"]
[ext_resource type="Script" uid="uid://b2o007yxvk7qa" path="res://scripts/node2d_factory.gd" id="38_u2mao"]
[ext_resource type="PackedScene" uid="uid://6g7y4d1dahuk" path="res://scenes/enemies/final_boss/warning.tscn" id="39_wk8ah"]
[ext_resource type="Script" uid="uid://d1toxknqfdla6" path="res://scenes/enemies/final_boss/inactive.gd" id="40_wk8ah"]
[ext_resource type="PackedScene" uid="uid://1dqxpkxolbg" path="res://scenes/enemies/final_boss/thunderStrikeBoss.tscn" id="41_u2mao"]
[ext_resource type="Script" uid="uid://b8wbpujyvf1qr" path="res://scenes/enemies/final_boss/stand_up.gd" id="41_yr5q8"]
[ext_resource type="Script" uid="uid://cax5v5vvvpy8n" path="res://scenes/enemies/final_boss/meteor_rain.gd" id="44_mpuyr"]
[ext_resource type="PackedScene" uid="uid://pgf87lpdsfte" path="res://scenes/enemies/final_boss/star_scene.tscn" id="46_i0lyx"]
[ext_resource type="PackedScene" uid="uid://8ucurw88rfh2" path="res://scenes/enemies/final_boss/fireShotProjectileBoss.tscn" id="47_o7w2u"]
[ext_resource type="Script" uid="uid://nyc2dcgdpxlh" path="res://scenes/enemies/final_boss/rain_bullets.gd" id="48_o7w2u"]
[ext_resource type="PackedScene" uid="uid://cb6h82l7nm4a2" path="res://scenes/enemies/final_boss/waterbullet_projectile.tscn" id="49_o7w2u"]
[ext_resource type="Script" uid="uid://cdgmrb0lrij71" path="res://scenes/enemies/final_boss/cutscene1.gd" id="51_cutscene1"]
[ext_resource type="Script" uid="uid://do3sabwty0y1" path="res://scenes/enemies/final_boss/cutscene2.gd" id="51_cutscene2"]
[ext_resource type="Script" uid="uid://yye803rj20g3" path="res://scenes/enemies/final_boss/cutscene3.gd" id="51_cutscene3"]
[ext_resource type="Script" uid="uid://cjouhd4hglfwn" path="res://scenes/enemies/final_boss/cutscene4.gd" id="51_cutscene4"]
[ext_resource type="Script" uid="uid://bkajgco6tqx1g" path="res://scenes/enemies/final_boss/cutscene_6.gd" id="52_ib6y0"]
[ext_resource type="PackedScene" uid="uid://cfwdngvncdiwu" path="res://scenes/enemies/final_boss/boss_spawner.tscn" id="52_spawner"]
[ext_resource type="PackedScene" uid="uid://dd7umy7lqfimd" path="res://scenes/enemies/minions/crab/crab.tscn" id="53_qin12"]
[ext_resource type="PackedScene" uid="uid://d0jkkqjvv3603" path="res://scenes/ui/boss_healthbar.tscn" id="54_g17ih"]
[ext_resource type="Script" uid="uid://dxaogovwyx8vi" path="res://scenes/enemies/final_boss/cutscene7.gd" id="54_ib6y0"]
[ext_resource type="PackedScene" uid="uid://c74auvuhbghse" path="res://scenes/enemies/minions/starfish/starfish.tscn" id="55_2anp0"]
[ext_resource type="Script" uid="uid://byheauwog643v" path="res://scenes/enemies/final_boss/dead.gd" id="56_2anp0"]
[ext_resource type="Script" uid="uid://rs2knmi2vck7" path="res://scenes/enemies/final_boss/charge.gd" id="57_mq2q6"]
[ext_resource type="Script" uid="uid://nbw04rh8ifur" path="res://scenes/enemies/final_boss/cutscene_5.gd" id="58_jywuh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4c0df"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_2anp0")
}, {
"duration": 1.0,
"texture": ExtResource("6_mq2q6")
}, {
"duration": 1.0,
"texture": ExtResource("7_g8jda")
}, {
"duration": 1.0,
"texture": ExtResource("8_j5bui")
}, {
"duration": 1.0,
"texture": ExtResource("9_jywuh")
}, {
"duration": 1.0,
"texture": ExtResource("10_v1rk7")
}, {
"duration": 1.0,
"texture": ExtResource("11_lqbuf")
}, {
"duration": 1.0,
"texture": ExtResource("12_dn80d")
}, {
"duration": 1.0,
"texture": ExtResource("13_dibg2")
}, {
"duration": 1.0,
"texture": ExtResource("14_inubh")
}, {
"duration": 1.0,
"texture": ExtResource("15_qosva")
}, {
"duration": 1.0,
"texture": ExtResource("16_exgn0")
}, {
"duration": 1.0,
"texture": ExtResource("17_hprn1")
}, {
"duration": 1.0,
"texture": ExtResource("18_u5gwl")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_i0lyx")
}, {
"duration": 1.0,
"texture": ExtResource("11_mcwyc")
}, {
"duration": 1.0,
"texture": ExtResource("12_o7w2u")
}, {
"duration": 1.0,
"texture": ExtResource("13_laq78")
}],
"loop": false,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_rehqn")
}, {
"duration": 1.0,
"texture": ExtResource("11_u2mao")
}, {
"duration": 1.0,
"texture": ExtResource("12_i0lyx")
}, {
"duration": 1.0,
"texture": ExtResource("13_mcwyc")
}, {
"duration": 1.0,
"texture": ExtResource("14_o7w2u")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_kafvu")
}, {
"duration": 1.0,
"texture": ExtResource("31_dxnia")
}, {
"duration": 1.0,
"texture": ExtResource("32_jo5tr")
}, {
"duration": 1.0,
"texture": ExtResource("33_iaysf")
}, {
"duration": 1.0,
"texture": ExtResource("34_4fith")
}],
"loop": true,
"name": &"moving",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w2egv"]
radius = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1rml4"]
radius = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5alav"]
radius = 29.0172

[node name="BlackEmperor" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_hljwo")
spawner_scene = ExtResource("52_spawner")
enemies_to_spawn = Array[PackedScene]([ExtResource("53_qin12"), ExtResource("55_2anp0")])
spike = 1.0
sight = 200.0
max_health = 2000
metadata/_custom_type_script = "uid://s4xx82espxdt"

[node name="Direction" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
sprite_frames = SubResource("SpriteFrames_4c0df")
animation = &"idle"
autoplay = "idle"
frame = 1
frame_progress = 0.982986

[node name="FrontRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(-1, 0)
target_position = Vector2(-50, 0)

[node name="LeftDetectRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(0, 10)
target_position = Vector2(-219, 1)
collision_mask = 130

[node name="RightDetectRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(0, 10)
target_position = Vector2(170, 0)
collision_mask = 130

[node name="HitArea2D" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 4
script = ExtResource("35_1vt48")
metadata/_custom_type_script = "uid://ccpqtop0obu2w"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitArea2D"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_w2egv")
debug_color = Color(0.575242, 0.0792793, 0, 0.42)

[node name="HurtArea2D" type="Area2D" parent="Direction"]
collision_layer = 16
collision_mask = 0
script = ExtResource("36_451n5")
metadata/_custom_type_script = "uid://csu2b21cwchqw"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Direction/HurtArea2D"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_1rml4")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="SkillFactory" type="Marker2D" parent="Direction"]
position = Vector2(0, -75)
script = ExtResource("38_u2mao")
metadata/_custom_type_script = "uid://b2o007yxvk7qa"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_5alav")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="DamageNumbersOrigin" type="Node2D" parent="."]
position = Vector2(25, -14)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 18)
enabled = false
zoom = Vector2(3, 3)

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource("40_wk8ah")

[node name="StandUp" type="Node" parent="States"]
script = ExtResource("41_yr5q8")

[node name="FlyLightning" type="Node" parent="States"]
script = ExtResource("35_qc2kf")
warning_scene = ExtResource("39_wk8ah")
lightning_scene = ExtResource("41_u2mao")

[node name="MeteorRain" type="Node" parent="States"]
script = ExtResource("44_mpuyr")
warning_scene = ExtResource("39_wk8ah")
star_scene = ExtResource("46_i0lyx")
meteor_scene = ExtResource("47_o7w2u")

[node name="RainBullets" type="Node" parent="States"]
script = ExtResource("48_o7w2u")
water_bullet_scene = ExtResource("49_o7w2u")

[node name="Cutscene1" type="Node" parent="States"]
script = ExtResource("51_cutscene1")

[node name="Cutscene2" type="Node" parent="States"]
script = ExtResource("51_cutscene2")

[node name="Cutscene3" type="Node" parent="States"]
script = ExtResource("51_cutscene3")

[node name="Cutscene4" type="Node" parent="States"]
script = ExtResource("51_cutscene4")

[node name="Cutscene5" type="Node" parent="States"]
script = ExtResource("58_jywuh")
bounce_back_velocity = null

[node name="Cutscene6" type="Node" parent="States"]
script = ExtResource("52_ib6y0")

[node name="Cutscene7" type="Node" parent="States"]
script = ExtResource("54_ib6y0")

[node name="Dead" type="Node" parent="States"]
script = ExtResource("56_2anp0")

[node name="Charge" type="Node" parent="States"]
script = ExtResource("57_mq2q6")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -25.0
offset_top = -48.0
offset_right = 24.0
offset_bottom = -25.0
text = "debug"

[node name="UI" type="CanvasLayer" parent="."]

[node name="BossHealthbar" parent="UI" node_paths=PackedStringArray("boss_node") instance=ExtResource("54_g17ih")]
offset_top = 8.0
offset_bottom = 8.0
boss_node = NodePath("../..")
transition_duration = 1.5
